# 1.0.4 : --/--/2020

* User config, cache
* GroupUser, field type corrections

# 1.0.3 : 20/01/2020

* Group & ...

# 1.0.2 : AutoLogin

* AutoLogin Header.

# 1.0.1 : First test version

* Simple SignIn SignOut