@@ -2,6 +2,7 @@
 
 * User config, cache
 * GroupUser, field type corrections
+* Send AskPassWord email
 
 # 1.0.3 : 20/01/2020
 
